--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -13,6 +13,8 @@ jobs:
         node-version: [18.x, 19.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
+    runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout repository source
         uses: actions/checkout@v3
