separate npm and gpr in release action

--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -5,10 +5,8 @@ on:
     types: [created]
 
 jobs:
-  release:
+  release-npm:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
 
     steps:
       - name: Checkout repository source
@@ -36,13 +34,34 @@ jobs:
         run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  release-gpr:
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+
+    steps:
+      - name: Checkout repository source
+        uses: actions/checkout@v3
 
       - name: Setup node.js
         uses: actions/setup-node@v3
         with:
           node-version: '19.x'
           registry-url: 'https://npm.pkg.github.com'
-      - name: Publish to GitHub Packages
+
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Install TypeScript
+        run: npm install -g typescript
+
+      - name: Compile TypeScript
+        run: tsc
+
+      - name: ESLint check
+        run: npx eslint .
+
+      - name: Publish to GitHub Package Registry
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
