--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Kruithne/nwjs-installer.git"
+		"url": "https://github.com/Kruithne/nwjs-installer.git"
 	},
 	"keywords": [
 		"nwjs",
