--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -5,8 +5,10 @@ on:
     types: [created]
 
 jobs:
-  release-npm:
+  release:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
 
     steps:
       - name: Checkout repository source
@@ -34,34 +36,8 @@ jobs:
         run: npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  release-gpr:
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
 
-    steps:
-      - name: Checkout repository source
-        uses: actions/checkout@v3
-
-      - name: Setup node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '19.x'
-          registry-url: 'https://npm.pkg.github.com'
-
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Install TypeScript
-        run: npm install -g typescript
-
-      - name: Compile TypeScript
-        run: tsc
-
-      - name: ESLint check
-        run: npx eslint .
-
-      - name: Publish to GitHub Package Registry
+      - name: Publish to GitHub Packages
         run: npm publish --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
