--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -30,6 +30,9 @@ jobs:
       - name: ESLint check
         run: npx eslint .
 
+      - name: Authenticate with GitHub Package Registry
+        run: echo "//npm.pkg.github.com:authToken${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+
       - name: Publish to GitHub Packages
         run: npm publish --registry=https://npm.pkg.github.com
         env:
