--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: '19.x'
           registry-url: 'https://registry.npmjs.org'
+          scope: '@kruithne'
 
       - name: Install dependencies
         run: npm ci
