automate release creation

--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -39,6 +39,20 @@ jobs:
       - name: Push changes
         run: git push --follow-tags
 
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            README.md
+            LICENSE
+            package.json
+            index.js
+            index.d.ts
+          tag_name: ${{ github.event.inputs.version }}
+          name: ${{ github.event.inputs.version }}
+          body: |
+            Release ${{ github.event.inputs.version }} ✨
+
       - name: Publish to npm.js
         run: npm publish
         env:
