--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "nwjs-installer",
 	"version": "1.1.0",
 	"type": "module",
-	"description": "Cross-platform CLI tool for building nw.js applications",
+	"description": "Cross-platform CLI tool for installing nw.js distributions",
 	"main": "index.js",
 	"scripts": {
 		"test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js",
